// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Sidebar renders 1`] = `
<div
  className="sidebar"
  id="sidebar-1"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <img
          alt="TESTBRAND vertical logo"
          className="logotype-vertical logotype-md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-home"
          />
          

          Home Page
          

        </a>
      </li>
      <li
        className="main-nav-li"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-electric-lightbulb"
          />
          

          Get Started
          

        </a>
        <nav
          className="sidebar-secondary-nav"
        >
          <header
            className="secondary-nav-header"
          >
            Get Started
          </header>
          <ul
            className="secondary-nav-ul"
          >
            <li
              className="secondary-nav-li leaf"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="at-wheelchair"
                />
                Accessibility
              </a>
            </li>
            <li
              className="secondary-nav-li leaf"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="at-colors"
                />
                Colors
              </a>
              <ul
                aria-expanded={true}
              >
                

                <a
                  className="previous-nav"
                  href="#"
                  onClick={[Function]}
                >
                  

                  <i
                    aria-expanded="false"
                    className="swepay-icon-chevron-left"
                  />
                  

                  <span>
                    Back to 
                    Get Started
                  </span>
                  

                </a>
                <header>
                  <i
                    aria-hidden="true"
                    className="at-colors"
                  />
                  Colors
                </header>
                <li
                  className="leaf"
                >
                  

                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    Primary colors
                  </a>
                </li>
                <li
                  className="group"
                >
                  

                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    Secondary colors
                  </a>
                  <ul
                    aria-expanded={true}
                  >
                    

                    <li
                      className="nav-leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Children 1
                      </a>
                    </li>
                    <li
                      className="nav-leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Children 2
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </nav>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar renders 10 levels when four levels is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <img
          alt="TESTBRAND vertical logo"
          className="logotype-vertical logotype-md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-electric-lightbulb"
          />
          

          Level 1
          

        </a>
        <nav
          className="sidebar-secondary-nav"
        >
          <header
            className="secondary-nav-header"
          >
            Level 1
          </header>
          <ul
            className="secondary-nav-ul"
          >
            <li
              className="secondary-nav-li leaf"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="at-wheelchair"
                />
                Level 2
              </a>
              <ul
                aria-expanded={true}
              >
                

                <a
                  className="previous-nav"
                  href="#"
                  onClick={[Function]}
                >
                  

                  <i
                    aria-expanded="false"
                    className="swepay-icon-chevron-left"
                  />
                  

                  <span>
                    Back to 
                    Level 1
                  </span>
                  

                </a>
                <header>
                  <i
                    aria-hidden="true"
                    className="at-wheelchair"
                  />
                  Level 2
                </header>
                <li
                  className="leaf"
                >
                  

                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    Level 3
                  </a>
                  <ul
                    aria-expanded={true}
                  >
                    

                    <a
                      className="previous-nav"
                      href="#"
                      onClick={[Function]}
                    >
                      

                      <i
                        aria-expanded="false"
                        className="swepay-icon-chevron-left"
                      />
                      

                      <span>
                        Back to 
                        Level 2
                      </span>
                      

                    </a>
                    <header>
                      Level 3
                    </header>
                    <li
                      className="leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Level 4
                      </a>
                      <ul
                        aria-expanded={true}
                      >
                        

                        <a
                          className="previous-nav"
                          href="#"
                          onClick={[Function]}
                        >
                          

                          <i
                            aria-expanded="false"
                            className="swepay-icon-chevron-left"
                          />
                          

                          <span>
                            Back to 
                            Level 3
                          </span>
                          

                        </a>
                        <header>
                          Level 4
                        </header>
                        <li
                          className="leaf"
                        >
                          

                          <a
                            href="#"
                            onClick={[Function]}
                          >
                            Level 5
                          </a>
                          <ul
                            aria-expanded={true}
                          >
                            

                            <a
                              className="previous-nav"
                              href="#"
                              onClick={[Function]}
                            >
                              

                              <i
                                aria-expanded="false"
                                className="swepay-icon-chevron-left"
                              />
                              

                              <span>
                                Back to 
                                Level 4
                              </span>
                              

                            </a>
                            <header>
                              Level 5
                            </header>
                            <li
                              className="leaf"
                            >
                              

                              <a
                                href="#"
                                onClick={[Function]}
                              >
                                Level 6
                              </a>
                              <ul
                                aria-expanded={true}
                              >
                                

                                <a
                                  className="previous-nav"
                                  href="#"
                                  onClick={[Function]}
                                >
                                  

                                  <i
                                    aria-expanded="false"
                                    className="swepay-icon-chevron-left"
                                  />
                                  

                                  <span>
                                    Back to 
                                    Level 5
                                  </span>
                                  

                                </a>
                                <header>
                                  Level 6
                                </header>
                                <li
                                  className="leaf"
                                >
                                  

                                  <a
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Level 7
                                  </a>
                                  <ul
                                    aria-expanded={true}
                                  >
                                    

                                    <a
                                      className="previous-nav"
                                      href="#"
                                      onClick={[Function]}
                                    >
                                      

                                      <i
                                        aria-expanded="false"
                                        className="swepay-icon-chevron-left"
                                      />
                                      

                                      <span>
                                        Back to 
                                        Level 6
                                      </span>
                                      

                                    </a>
                                    <header>
                                      Level 7
                                    </header>
                                    <li
                                      className="leaf"
                                    >
                                      

                                      <a
                                        href="#"
                                        onClick={[Function]}
                                      >
                                        Level 8
                                      </a>
                                      <ul
                                        aria-expanded={true}
                                      >
                                        

                                        <a
                                          className="previous-nav"
                                          href="#"
                                          onClick={[Function]}
                                        >
                                          

                                          <i
                                            aria-expanded="false"
                                            className="swepay-icon-chevron-left"
                                          />
                                          

                                          <span>
                                            Back to 
                                            Level 7
                                          </span>
                                          

                                        </a>
                                        <header>
                                          Level 8
                                        </header>
                                        <li
                                          className="group"
                                        >
                                          

                                          <a
                                            href="#"
                                            onClick={[Function]}
                                          >
                                            Level 9
                                          </a>
                                          <ul
                                            aria-expanded={true}
                                          >
                                            

                                            <li
                                              className="nav-leaf"
                                            >
                                              

                                              <a
                                                href="#"
                                                onClick={[Function]}
                                              >
                                                Level 10
                                              </a>
                                            </li>
                                          </ul>
                                        </li>
                                      </ul>
                                    </li>
                                  </ul>
                                </li>
                              </ul>
                            </li>
                          </ul>
                        </li>
                      </ul>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </nav>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar renders five levels when four levels is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <img
          alt="TESTBRAND vertical logo"
          className="logotype-vertical logotype-md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-electric-lightbulb"
          />
          

          Get Started
          

        </a>
        <nav
          className="sidebar-secondary-nav"
        >
          <header
            className="secondary-nav-header"
          >
            Get Started
          </header>
          <ul
            className="secondary-nav-ul"
          >
            <li
              className="secondary-nav-li leaf"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="at-wheelchair"
                />
                Accessibility
              </a>
              <ul
                aria-expanded={true}
              >
                

                <a
                  className="previous-nav"
                  href="#"
                  onClick={[Function]}
                >
                  

                  <i
                    aria-expanded="false"
                    className="swepay-icon-chevron-left"
                  />
                  

                  <span>
                    Back to 
                    Get Started
                  </span>
                  

                </a>
                <header>
                  <i
                    aria-hidden="true"
                    className="at-wheelchair"
                  />
                  Accessibility
                </header>
                <li
                  className="leaf"
                >
                  

                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    Primary colors
                  </a>
                  <ul
                    aria-expanded={true}
                  >
                    

                    <a
                      className="previous-nav"
                      href="#"
                      onClick={[Function]}
                    >
                      

                      <i
                        aria-expanded="false"
                        className="swepay-icon-chevron-left"
                      />
                      

                      <span>
                        Back to 
                        Accessibility
                      </span>
                      

                    </a>
                    <header>
                      Primary colors
                    </header>
                    <li
                      className="group"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Children 2
                      </a>
                      <ul
                        aria-expanded={true}
                      >
                        

                        <li
                          className="nav-leaf"
                        >
                          

                          <a
                            href="#"
                            onClick={[Function]}
                          >
                            Gran children 1
                          </a>
                        </li>
                      </ul>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </nav>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar renders four levels when four levels is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <img
          alt="TESTBRAND vertical logo"
          className="logotype-vertical logotype-md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-electric-lightbulb"
          />
          

          Get Started
          

        </a>
        <nav
          className="sidebar-secondary-nav"
        >
          <header
            className="secondary-nav-header"
          >
            Get Started
          </header>
          <ul
            className="secondary-nav-ul"
          >
            <li
              className="secondary-nav-li leaf"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="at-wheelchair"
                />
                Accessibility
              </a>
              <ul
                aria-expanded={true}
              >
                

                <a
                  className="previous-nav"
                  href="#"
                  onClick={[Function]}
                >
                  

                  <i
                    aria-expanded="false"
                    className="swepay-icon-chevron-left"
                  />
                  

                  <span>
                    Back to 
                    Get Started
                  </span>
                  

                </a>
                <header>
                  <i
                    aria-hidden="true"
                    className="at-wheelchair"
                  />
                  Accessibility
                </header>
                <li
                  className="group"
                >
                  

                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    Primary colors
                  </a>
                  <ul
                    aria-expanded={true}
                  >
                    

                    <li
                      className="nav-leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Children 1
                      </a>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </nav>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar renders one level when one level is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <img
          alt="TESTBRAND vertical logo"
          className="logotype-vertical logotype-md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-home"
          />
          

          Home Page
          

        </a>
      </li>
      <li
        className="main-nav-li"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-electric-lightbulb"
          />
          

          Get Started
          

        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar renders three levels when three levels is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <img
          alt="TESTBRAND vertical logo"
          className="logotype-vertical logotype-md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-electric-lightbulb"
          />
          

          Get Started
          

        </a>
        <nav
          className="sidebar-secondary-nav"
        >
          <header
            className="secondary-nav-header"
          >
            Get Started
          </header>
          <ul
            className="secondary-nav-ul"
          >
            <li
              className="secondary-nav-li group"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                Accessibility
              </a>
              <ul
                aria-expanded={true}
              >
                

                <li
                  className="nav-leaf"
                >
                  

                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    Primary colors
                  </a>
                </li>
              </ul>
            </li>
          </ul>
        </nav>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar renders two levels when two levels is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <img
          alt="TESTBRAND vertical logo"
          className="logotype-vertical logotype-md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            aria-hidden="true"
            className="at-electric-lightbulb"
          />
          

          Get Started
          

        </a>
        <nav
          className="sidebar-secondary-nav"
        >
          <header
            className="secondary-nav-header"
          >
            Get Started
          </header>
          <ul
            className="secondary-nav-ul"
          >
            <li
              className="secondary-nav-li leaf"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="at-wheelchair"
                />
                Accessibility
              </a>
            </li>
            <li
              className="secondary-nav-li leaf"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="at-colors"
                />
                Colors
              </a>
            </li>
          </ul>
        </nav>
      </li>
    </ul>
  </nav>
</div>
`;
